import "php.proto";

package tests;

//option (php.namespace) = "Example";
//option (php.multifile) = true;

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;
}

message AddressBook {
  repeated Person person = 1;

  extensions 1000 to max;
}

extend AddressBook {

    // These two are aliases and set the namespace
    optional string package     = 50001;

}